--- a/templates/index.html
+++ b/templates/index.html
@@ -67,13 +67,22 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Clarence
-            <span class="text-primary">Taylor</span>
-          </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+          <h2 class="mb-0">Promise
+            <span class="text-primary">Nyamela</span>
+          </h2>
+          <div class="subheading mb-5">
+            Software Support Engineer | QA Engineer | Software Developer
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">
+                        
+              As a versatile and self-motivated professional, I have cultivated a diverse skill set and a passion for excellence in the world of software. With a foundation built on self-guided learning, I've delved into various domains, including software development, quality assurance (QA), QA automation, and software support engineering. My expertise extends to Python, Java, and C#, where I harness these languages to craft innovative solutions and ensure seamless user experiences.
+
+              Throughout my career, I've honed my ability to bridge the gap between technical complexity and customer satisfaction. My commitment to delivering high-quality software and providing exceptional customer service has been a driving force in my journey. I thrive in dynamic environments, adapting quickly to evolving challenges and finding creative solutions.
+
+              I am passionate about continuous improvement, staying up-to-date with industry trends, and collaborating with teams to achieve collective goals. With a solid foundation and a hunger for growth, I look forward to contributing my skills and knowledge to exciting projects and helping organizations thrive in the digital age.
+
+            
+          </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
