--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,11 @@
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
+
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+                    
+    <link href="https://fontawesome.com/icons/hackerrank?f=brands&s=solid" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
     <link href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
@@ -74,34 +79,31 @@
             Software Support Engineer | QA Engineer | Software Developer
           </div>
           <p class="mb-5">
-                        
-              As a versatile and self-motivated professional, I have cultivated a diverse skill set and a passion for excellence in the world of software. With a foundation built on self-guided learning, I've delved into various domains, including software development, quality assurance (QA), QA automation, and software support engineering. My expertise extends to Python, Java, and C#, where I harness these languages to craft innovative solutions and ensure seamless user experiences.
-
-              Throughout my career, I've honed my ability to bridge the gap between technical complexity and customer satisfaction. My commitment to delivering high-quality software and providing exceptional customer service has been a driving force in my journey. I thrive in dynamic environments, adapting quickly to evolving challenges and finding creative solutions.
-
-              I am passionate about continuous improvement, staying up-to-date with industry trends, and collaborating with teams to achieve collective goals. With a solid foundation and a hunger for growth, I look forward to contributing my skills and knowledge to exciting projects and helping organizations thrive in the digital age.
-
-            
+            As a versatile and self-motivated professional, I have cultivated a diverse skill 
+            set and a passion for excellence in the world of software. With a foundation built 
+            on self-guided learning, I've delved into various domains, including software 
+            development, quality assurance (QA), QA automation, and software support 
+            engineering. My expertise extends to Python, Java, and C#, where I harness these 
+            languages to craft innovative solutions and ensure seamless user experiences.
           </p>
+          <p class="mb-5">
+            Throughout my career, I've honed my ability to bridge the gap between technical 
+            complexity and customer satisfaction. My commitment to delivering high-quality 
+            software and providing exceptional customer service has been a driving force in my 
+            journey. I thrive in dynamic environments, adapting quickly to evolving challenges 
+            and finding creative solutions.
+          </p>
+          <p class="mb-5">
+              I am passionate about continuous improvement, staying up-to-date with industry 
+              trends, and collaborating with teams to achieve collective goals. With a solid 
+              foundation and a hunger for growth, I look forward to contributing my skills and 
+              knowledge to exciting projects and helping organizations thrive in the digital age.     
+          </p>
+          <!-- ===================================  SOCIAL MEDIA ==================== -->
           <ul class="list-inline list-social-icons mb-0">
+          
             <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/promise-nyamela-033585156/" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -109,7 +111,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://github.com/Makhosandile" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -119,6 +121,10 @@
           </ul>
         </div>
       </section>
+<!-- ======================================== END ABOUT SECTION ============================== -->
+
+
+<!-- ======================================= EXPERIENCE ================================= -->
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
@@ -126,42 +132,107 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <h3 class="mb-0">Software Support Engineer</h3>
+              <div class="subheading mb-3">M4JAM</div>
+                <P>
+                  Provide onsite support.  
+                </P>
+
+                <p>
+                  Perform root cause analysis.
+                </p>
+
+                <P>
+                  Coordinating efforts with quality assurance engineers, business analysts, software engineers, 
+                  customer support agents and other teams to identify and resolve issues effectively.
+                </P>
+
+                <P>
+                  Documenting and tracking issues in software and hardware operation for internal and 
+                  consumer-facing systems.
+                </P>
+
+                <p>
+                  Providing content for tutorials, training, and documentation.
+                </p>
+
+                <p>
+                  Assisting business analysts and quality assurance engineers plan, implement 
+                  and test software throughout the software development lifecycle. 
+                </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">January 2018 - March 2023</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <h3 class="mb-0">Junior Java Developer</h3>
+              <div class="subheading mb-3">Reverside</div>
+
+              <p>
+                Collaborate with senior Java developers to understand project requirements and specifications.
+              </p>
+
+              <p>
+                Participate in the design and implementation of Java applications, adhering to best coding practices.
+              </p>
+
+              <p>
+                Assist in writing efficient and maintainable code for software functionality.
+              </p>
+
+              <p>
+                Support the testing and debugging processes to identify and resolve issues.
+              </p>
+
+              <p>
+                Document the development process, code changes, and application functionalities.
+              </p>
+
+              <p>
+                Stay up-to-date with the latest Java technologies and trends.
+              </p>
+
+              <p>
+                Contribute ideas and solutions to improve the overall development process
+              </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">October 2017 - January 2018</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <h3 class="mb-0">Intern Web Developer</h3>
+              <div class="subheading mb-3">Independant Media</div>
+                <p>
+                  Developing and writing scripts using the following tech stack:
+                  WordPress, JavaScript, Angular, PHP
+                </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
+              <span class="text-primary">December 2016 - September 2017</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+              <h3 class="mb-0">Customer Service Technician</h3>
+              <div class="subheading mb-3">Hifi Corp.</div>
+                <p>
+                  Typing, operating public phones, printers, faxes
+                </p>
+                <P>
+                  Admin duties
+                </P>
+
+                <p>
+                  I later learned troubleshooting and repair computer hardware and Software and 
+                  proposed we add computer repairs and software installations to our services.
+                </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2008 - June 2010</span>
@@ -172,36 +243,36 @@
 
       </section>
 
+      <!-- =============================== EDUCATION SECTION ================================== -->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
           <h2 class="mb-5">Education</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">Zwelitsha Senior Secondary School</h3>
+              <div class="subheading mb-3">Grade 12</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">2003 - 2005</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Hyperion Dev.</h3>
+              <div class="subheading mb-3">Software Development Micro-Degree</div>
+              <p>Java, python, C#</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">January 2016 - November 2016</span>
             </div>
           </div>
 
         </div>
       </section>
 
+<!-- ==================================  SKILLS ==============================================-->
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
           <h2 class="mb-5">Skills</h2>
@@ -209,37 +280,55 @@
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline list-icons">
             <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
+              
+              <i class="devicon-java-plain-wordmark colored"></i>
+          
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
+              
+              <i class="devicon-python-plain-wordmark colored"></i>
+          
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
+                
+              <i class="devicon-javascript-plain colored"></i>
+          
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-jquery"></i>
+              <i class="devicon-spring-plain-wordmark colored"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
+              <i class="devicons devicons-django"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
+              <i class="devicon-flask-original-wordmark"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
+              
+              <i class="devicon-angularjs-plain-wordmark colored"></i>
+  
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
+              
+              <i class="devicon-postgresql-plain-wordmark colored"></i>
+          
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
+              
+              <i class="devicon-docker-plain-wordmark colored"></i>
+          
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
+              
+              
+              <i class="devicon-github-original-wordmark colored"></i>
+          
+          
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
+              
+              <i class="devicon-git-plain-wordmark colored"></i>
+          
             </li>
           </ul>
 
@@ -305,6 +394,8 @@
       </section>
 
     </div>
+
+    <script src="https://kit.fontawesome.com/47bb72732b.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap core JavaScript -->
     <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
