--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
           
   <link href="{% static '/vendor/aos/aos.css' %}" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/921482977d.js" crossorigin="anonymous"></script>
   <link href="{% static '/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static '/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
   <link href="{% static '/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
@@ -46,6 +47,7 @@
         <img src="{% static '/img/i.jpg' %}" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="#">Promise Nyamela</a></h1>
         <div class="social-links mt-3 text-center">
+          <a href="https://www.hackerrank.com/profile/mpnyamela" class="github" target="_blank"><i class="fa-brands fa-hackerrank"></i></a> 
           <a href="https://github.com/makhosandile" class="github" target="_blank"><i class="bi bi-github"></i></a>
           <a href="https://www.linkedin.com/in/promise-nyamela-033585156/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
           <a href="https://wa.me/+27761460781" class="whatsapp" target="_blank"><i class="bi bi-whatsapp"></i></a>
