--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Promise</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-
-  <!-- Favicons -->
-  <link href="{% static '/img/favicon.png' %}" rel="icon">
-  <link href="{% static '/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -79,7 +75,6 @@
 
         <div class="section-title">
           <h2>About</h2>
-
         </div>
 
         <div class="row">
@@ -100,15 +95,35 @@
               automation, and Data analytics and visualization.
             </p>
             <p class="fst-italic mb-2">
-              My strength lies in bridging technical complexity with customer satisfaction. I
-               adapt well to changing environments, stay updated with industry trends, and enjoy collaborating with teams. I'm eager to contribute my skills and knowledge to exciting projects and where I can grow.
-
-            
+              My experience with working with customers and different stake holders. I
+               adapt well to changing environments, stay updated with industry trends, and enjoy 
+               collaborating with teams. I'm eager to contribute my skills and knowledge to 
+               exciting projects and where I can grow.
             </p>
 
           
           </div>
+          
+          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+            <br><br><br>
+            <h3>Projects</h3>
+
+            <p class="fst-italic mb-2">
+              I am always learning new skills and working to improve my coding skills, I have 
+              developed
+              Full Stack projects, APIs, Data analytics and visualization, and Automation tesing 
+              frameworks 
+              projects in my github account and hackerrank account, where I practice refine my 
+              coding skills.
+            </p>
+
+        <div class="social-links mt-3 text-center">
+          <a href="https://www.hackerrank.com/profile/mpnyamela" class="github" target="_blank"><i class="fa-brands fa-hackerrank fa-2xl"></i></a> 
+          <a href="https://github.com/makhosandile" class="github" target="_blank"><i class="bi bi-github fa-2xl"></i></a>
         </div>
+          </div>
+        </div>
+        
 
       </div>
     </section><!-- End About Section -->
@@ -261,6 +276,8 @@
 
       </div>
     </section><!-- End Resume Section -->
+
+    
 
 
   </main><!-- End #main -->
