--- a/templates/index.html
+++ b/templates/index.html
@@ -150,6 +150,11 @@
             <i class="devicon-selenium-original colored" style="font-size: 70px; margin-right: 20px;"></i>
             <i class="devicon-bootstrap-plain-wordmark colored" style="font-size: 70px; margin-right: 20px;"></i>  <br><br><br>
             <i class="devicon-postgresql-plain-wordmark colored " style="font-size: 70px; margin-right: 20px;"></i> 
+            <i class="devicon-github-original-wordmark colored" style="font-size: 70px; margin-right: 20px;"></i> 
+            <i class="devicon-travis-plain-wordmark colored" style="font-size: 70px; margin-right: 20px;"></i> 
+            <i class="devicon-jenkins-plain" style="font-size: 70px; margin-right: 20px;"></i> 
+            <i class="devicon-kubernetes-plain-wordmark colored" style="font-size: 70px; margin-right: 20px;"></i> 
+            <i class="devicon-pandas-original-wordmark colored" style="font-size: 70px; margin-right: 20px;"></i>   
           </div>
         </div>
 
